force CUPS_HOSTNAME to mdns name

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -28,6 +28,8 @@ spec:
       containers:
       - image: drpsychick/airprint-bridge:latest
         env:
+          - name: CUPS_HOSTNAME
+            value: 'airprint-bridge.airprint-bridge.local'
           - name: CUPS_LPADMIN_PRINTER1
             value: 'lpadmin -p second -D HL-2270Dw -m everywhere -v ipp://brn001ba97533c8.local'
         imagePullPolicy: Always
