Revert "switch to NodePort"
This reverts commit 521e243cea4830ed17cc1c9bcc57dfb6f14da854.

--- a/service.yaml
+++ b/service.yaml
@@ -15,8 +15,8 @@ spec:
   - IPv4
   ipFamilyPolicy: SingleStack
   ports:
-  - nodePort: 631
+  - nodePort: 32193
     port: 631
   selector:
     app: airprint-bridge
-  type: NodePort
+  type: LoadBalancer
