--- a/service.yaml
+++ b/service.yaml
@@ -2,14 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    app: airprint-bridge
-  name: airprint-bridge
-  namespace: airprint-bridge
+    app: airprint
+  name: airprint
+  namespace: airprint
 spec:
   allocateLoadBalancerNodePorts: true
-  clusterIP: 10.152.183.55
-  clusterIPs:
-  - 10.152.183.55
   internalTrafficPolicy: Cluster
   ipFamilies:
   - IPv4
@@ -18,5 +15,5 @@ spec:
   - nodePort: 32193
     port: 631
   selector:
-    app: airprint-bridge
+    app: airprint
   type: LoadBalancer
